crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__bench_formats_as_notice.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::notice title=Benchmark Result::bench_foo: 1000 ns/iter (± 50) (100 MiB/s)
