crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__discovered_formats_as_debug.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::debug::Discovered test: test_foo (ignored: false, message: None, location: src/lib.rs:10:5-15:6)
