crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__failed_test_formats_as_error.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::endgroup::
::notice title=Test Failed: my_test::should_work (executed in 0.00s)::assertion failed
