crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__failed_with_long_stdout_truncates.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::endgroup::
::notice title=Test Failed: test_verbose::
