crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__failed_with_multiline_message_sanitizes_newlines.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::endgroup::
::notice title=Test Failed: test_multiline::line 1
line 2
line 3
