crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__format_github@GitHub Actions-suite_completed.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::endgroup::
::notice title=Test Discovery::Discovered 47 items: 42 tests, 5 benchmarks, 3 ignored
