crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__format_github@GitHub Actions-suite_failed.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::error title=Test Suite Failed::2 failed, 38 passed, 2 ignored, 0 measured, 5 filtered out in 1.57s
