crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__format_github@GitHub Actions-suite_started.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::notice title=Test Suite Started::Running 42 tests
