crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__format_github@GitHub Actions-test_discovered.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::debug::Discovered test: test_example (ignored: false, message: None, location: src/lib.rs:10:4-15:5)
